apps/base/traefik/dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: 'traefik-dashboard'
spec:
  entryPoints:
    - 'websecure'
  routes:
    - match: 'Host(`traefik.orleans.io`)'
      kind: 'Rule'
      services:
        - kind: TraefikService
          name: api@internal
      # middlewares:
      # - name: security-no-frame-deny
      #   namespace: kube-system
